# hashicorpDemo

./: .gitignore  Jenkinsfile  Makefile  README.md
app/: BUILD.bazel  WORKSPACE
app/deployment/: deployment.yaml
app/swagger/: swagger.yml
infra/: backend.tf  main.tf  output.tf  plan  variables.tf
infra/aks/: main.tf  output.tf  variables.tf
infra/backend/: awsbackend.sh  policy.json
infra/builders/TerraformContainer/: Dockerfile
infra/postgres/: main.tf  variables.tf
infra/postgres/postgres-chart/templates/: _helpers.tpl  binding.yaml  instance.yaml
